# Algorim_paral

./: CMakeLists.txt  README.md  main.cpp  test_fun.cpp
.github/workflows/: c-cpp.yml  tets.yml
